// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`incorrect-docblocks.js 1`] = `
"
import fs from 'fs';


import chickenLibrary from 'chicken';
import okapiMe from 'okapi-me';

function hello() {}

"
`;

exports[`only-imports.js 1`] = `
"
import fs from 'fs';


import chickenLibrary from 'chicken';
import okapiMe from 'okapi-me';

"
`;

exports[`with-body.js 1`] = `
"
import fs from 'fs';


import chickenLibrary from 'chicken';
import okapiMe from 'okapi-me';

const x = 5;

"
`;
